--- a/crates/test-utils/Cargo.toml
+++ b/crates/test-utils/Cargo.toml
@@ -40,6 +40,7 @@ mysten-network.workspace = true
 
 move-binary-format.workspace = true
 move-core-types.workspace = true
+move-package.workspace = true
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
 
 [target.'cfg(msim)'.dependencies]
