--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -116,12 +116,14 @@
         "@growthbook/growthbook": "^0.20.1",
         "@growthbook/growthbook-react": "^0.10.1",
         "@headlessui/react": "^1.7.7",
-        "@ledgerhq/hw-transport": "^6.27.10",
+        "@ledgerhq/errors": "^6.12.3",
+        "@ledgerhq/hw-transport": "^6.27.11",
         "@ledgerhq/hw-transport-webhid": "^6.27.11",
         "@ledgerhq/hw-transport-webusb": "^6.27.11",
         "@metamask/browser-passworder": "^4.0.2",
         "@mysten/core": "workspace:*",
         "@mysten/icons": "workspace:*",
+        "@mysten/ledgerjs-hw-app-sui": "workspace:*",
         "@mysten/sui.js": "workspace:*",
         "@mysten/wallet-standard": "workspace:*",
         "@noble/hashes": "^1.1.5",
