Time access kept together and placed in build section

--- a/doc/src/navconfig.json
+++ b/doc/src/navconfig.json
@@ -126,6 +126,10 @@
 				"fileName": "build/sui-local-network"
 			},
 			{
+				"label": "Accessing Time in Sui Move",
+				"filename": "build/time"
+			},
+			{
 				"label": "Create Smart Contracts with Move",
 				"fileName": "build/move/index",
 				"title": "Smart Contracts with Move",
