move: validate dependencies' published addresses (#8919)
## Description 

Validate `published-at` properties in `Move.toml` for all transitive
package dependencies on `publish`.

## Test Plan 

Covered by existing `simtest` and publish tests. Added additional test
to exercise the case where `published-at` is not set.

---
If your changes are not user-facing and not a breaking change, you can
skip the following section. Otherwise, please indicate what changed, and
then add to the Release Notes section as highlighted during the release
process.

### Type of Change (Check all that apply)

- [x] user-visible impact
- [ ] breaking change for a client SDKs
- [ ] breaking change for FNs (FN binary must upgrade)
- [ ] breaking change for validators or node operators (must upgrade
binaries)
- [ ] breaking change for on-chain data layout
- [ ] necessitate either a data wipe or data migration

### Release notes

Copied from `doc/in-progress/move_published_at_property.md`:

> Package dependencies are now required to specify a `published-at`
field in `Move.toml` that specifies the address that the dependency is
published at. For example, The SUI framework is published at address
`0x2`. So, the `Move.toml` file for the SUI framework has a
corresponding line that says:
>
```toml
published-at = "0x2"
```
>
> If your package depends on another package, like the SUI framework,
your package will be linked against the `published-at` address specified
by the SUI framework on-chain once you publish your package. When
publishing, we resolve all of your package dependencies (i.e.,
transitive dependencies) to link against. This means we recommend
publishing packages where all dependencies have a `published-at` address
in their manifest. The publish command will fail by default if this is
not the case. If needed, you may use the
`--with-unpublished-dependencies` flag with the publish command to
bypass the requirement that all dependencies requ

--- a/crates/sui-json-rpc/Cargo.toml
+++ b/crates/sui-json-rpc/Cargo.toml
@@ -19,6 +19,7 @@ tower-http = { version = "0.3.4", features = ["full"] }
 move-binary-format.workspace = true
 move-bytecode-utils.workspace = true
 move-core-types.workspace = true
+move-package.workspace = true
 prometheus = "0.13.3"
 anyhow = "1.0.64"
 tracing = "0.1.36"
