--- a/.github/workflows/simtest.yml
+++ b/.github/workflows/simtest.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Checkout sui repo
         run: |
-          tsh ssh -i ${{ steps.auth.outputs.identity-file }} ubuntu@simtest "cd ~/sui && git fetch origin && git rebase origin/main && cargo clean"
+          tsh ssh -i ${{ steps.auth.outputs.identity-file }} ubuntu@simtest "cd ~/sui && git fetch origin && git rebase origin/main && /home/ubuntu/.cargo/bin/cargo clean"
 
       - name: Install simtest
         run: |
@@ -73,44 +73,44 @@ jobs:
         gh_job_link=$(gh api -X GET 'repos/MystenLabs/sui/actions/runs/${{ github.run_id }}/jobs' --jq '.jobs.[0].html_url')
         echo "gh_job_link=${gh_job_link}" >> $GITHUB_ENV        
 
-    - name: Post to slack
-      uses: slackapi/slack-github-action@936158bbe252e9a6062e793ea4609642c966e302 # pin@v1.21.0
-      env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-        SUI_SHA: ${{ env.sui_sha }}
-        GH_JOB_LINK: ${{ env.gh_job_link }}
-      with:
-        channel-id: 'simtest-nightly'
-        payload: |
-          {
-            "text": "*${{ github.workflow }}* workflow status: `${{ env.WORKFLOW_CONCLUSION }}`",
-            "blocks": [
-              {
-                "type": "section",
-                "text": {
-                  "type": "mrkdwn",
-                  "text": "*${{ github.workflow }}* workflow status: `${{ env.WORKFLOW_CONCLUSION }}`"
-                }
-              },
-              {
-                "type": "divider"
-              },
-              {
-                "type": "section",
-                "text": {
-                  "type": "mrkdwn",
-                  "text": "Sui commit: <https://github.com/MystenLabs/sui/commit/${{ env.SUI_SHA }}|${{ env.SUI_SHA }}> \nLogs: <${{ env.GH_JOB_LINK }}|${{ github.run_id }}>"
-                }
-              },
-              {
-                "type": "divider"
-              },
-              {
-                "type": "section",
-                "text": {
-                  "type": "mrkdwn",
-                  "text": "To debug failures: `ssh simtest.sui.io` and look in `/home/ubuntu/simtest_logs/{date}` folder"
-                }
-              }
-            ]
-          }
+    # - name: Post to slack
+    #   uses: slackapi/slack-github-action@936158bbe252e9a6062e793ea4609642c966e302 # pin@v1.21.0
+    #   env:
+    #     SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+    #     SUI_SHA: ${{ env.sui_sha }}
+    #     GH_JOB_LINK: ${{ env.gh_job_link }}
+    #   with:
+    #     channel-id: 'simtest-nightly'
+    #     payload: |
+    #       {
+    #         "text": "*${{ github.workflow }}* workflow status: `${{ env.WORKFLOW_CONCLUSION }}`",
+    #         "blocks": [
+    #           {
+    #             "type": "section",
+    #             "text": {
+    #               "type": "mrkdwn",
+    #               "text": "*${{ github.workflow }}* workflow status: `${{ env.WORKFLOW_CONCLUSION }}`"
+    #             }
+    #           },
+    #           {
+    #             "type": "divider"
+    #           },
+    #           {
+    #             "type": "section",
+    #             "text": {
+    #               "type": "mrkdwn",
+    #               "text": "Sui commit: <https://github.com/MystenLabs/sui/commit/${{ env.SUI_SHA }}|${{ env.SUI_SHA }}> \nLogs: <${{ env.GH_JOB_LINK }}|${{ github.run_id }}>"
+    #             }
+    #           },
+    #           {
+    #             "type": "divider"
+    #           },
+    #           {
+    #             "type": "section",
+    #             "text": {
+    #               "type": "mrkdwn",
+    #               "text": "To debug failures: `ssh simtest.sui.io` and look in `/home/ubuntu/simtest_logs/{date}` folder"
+    #             }
+    #           }
+    #         ]
+    #       }
