--- a/crates/sui-core/Cargo.toml
+++ b/crates/sui-core/Cargo.toml
@@ -78,6 +78,7 @@ sui-macros = { path = "../sui-macros" }
 
 [dev-dependencies]
 clap = { version = "3.2.17", features = ["derive"] }
+criterion = { version = "0.4.0" }
 fs_extra = "1.2.0"
 more-asserts="0.3.1"
 serde-reflection = "0.3.6"
@@ -98,3 +99,7 @@ test-utils = { path = "../test-utils" }
 name = "generate-format"
 path = "src/generate_format.rs"
 test = false
+
+[[bench]]
+name = "verified_cert_cache_bench"
+harness = false
