--- a/.github/workflows/simtest.yml
+++ b/.github/workflows/simtest.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Checkout sui repo
         run: |
-          tsh ssh -i ${{ steps.auth.outputs.identity-file }} ubuntu@simtest "cd ~/sui && git fetch origin && git rebase origin/main && /home/ubuntu/.cargo/bin/cargo clean"
+          tsh ssh -i ${{ steps.auth.outputs.identity-file }} ubuntu@simtest "cd ~/sui && git fetch origin && git rebase origin/main && cargo clean"
 
       - name: Install simtest
         run: |
@@ -109,7 +109,7 @@ jobs:
     #             "type": "section",
     #             "text": {
     #               "type": "mrkdwn",
-    #               "text": "To debug failures: `ssh simtest.sui.io` and look in `/home/ubuntu/simtest_logs/{date}` folder"
+    #               "text": "To debug failures: `tsh ssh ubuntu@simtest` and look in `/home/ubuntu/simtest_logs/{date}` folder"
     #             }
     #           }
     #         ]
