--- a/narwhal/types/Cargo.toml
+++ b/narwhal/types/Cargo.toml
@@ -41,6 +41,7 @@ workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }
 once_cell = "1.16.0"
 
 store = { path = "../../crates/typed-store", package = "typed-store" }
+mysten-common.workspace = true
 mysten-network.workspace = true
 mysten-util-mem.workspace = true
 
