--- a/crates/sui-core/Cargo.toml
+++ b/crates/sui-core/Cargo.toml
@@ -14,6 +14,7 @@ bcs = "0.1.4"
 chrono = "0.4.23"
 futures = "0.3.23"
 bytes = "1.3.0"
+enum_dispatch = "^0.3"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.88"
 serde_with = "2.1.0"
