--- a/crates/sui-core/Cargo.toml
+++ b/crates/sui-core/Cargo.toml
@@ -47,6 +47,7 @@ sui-config = { path = "../sui-config" }
 sui-json = { path = "../sui-json" }
 sui-json-rpc-types = { path = "../sui-json-rpc-types" }
 sui-protocol-config = { path = "../sui-protocol-config" }
+lru = "0.10"
 
 move-binary-format.workspace = true
 move-bytecode-utils.workspace = true
@@ -77,6 +78,7 @@ sui-macros = { path = "../sui-macros" }
 
 [dev-dependencies]
 clap = { version = "3.2.17", features = ["derive"] }
+criterion = { version = "0.4.0" }
 fs_extra = "1.2.0"
 more-asserts="0.3.1"
 serde-reflection = "0.3.6"
@@ -97,3 +99,7 @@ test-utils = { path = "../test-utils" }
 name = "generate-format"
 path = "src/generate_format.rs"
 test = false
+
+[[bench]]
+name = "verified_cert_cache_bench"
+harness = false
