Batch verification with fallback + tests and benchmark

--- a/crates/sui-core/Cargo.toml
+++ b/crates/sui-core/Cargo.toml
@@ -105,3 +105,7 @@ test = false
 [[bench]]
 name = "verified_cert_cache_bench"
 harness = false
+
+[[bench]]
+name = "batch_verification_bench"
+harness = false
