--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -79,9 +79,11 @@ Command:
               TYPENAME: Argument
     4:
       Publish:
-        NEWTYPE:
-          SEQ:
-            SEQ: U8
+        TUPLE:
+          - SEQ:
+              SEQ: U8
+          - SEQ:
+              TYPENAME: ObjectID
     5:
       MakeMoveVec:
         TUPLE:
