[Narwhal] use NotifyOnce for availability of suspended certificate (#9079)
## Description 

Current `AcceptNotification` implementation is error prone.
Switch to NotifyOnce should achieve the intended semantics
in a better way.

## Test Plan 

Verify in private testnet.

---
If your changes are not user-facing and not a breaking change, you can
skip the following section. Otherwise, please indicate what changed, and
then add to the Release Notes section as highlighted during the release
process.

### Type of Change (Check all that apply)

- [ ] user-visible impact
- [ ] breaking change for a client SDKs
- [ ] breaking change for FNs (FN binary must upgrade)
- [ ] breaking change for validators or node operators (must upgrade
binaries)
- [ ] breaking change for on-chain data layout
- [ ] necessitate either a data wipe or data migration

### Release notes

--- a/crates/sui-core/Cargo.toml
+++ b/crates/sui-core/Cargo.toml
@@ -55,6 +55,7 @@ move-core-types.workspace = true
 move-vm-runtime.workspace = true
 move-package.workspace = true
 
+mysten-common.workspace = true
 mysten-metrics = { path = "../mysten-metrics" }
 narwhal-config = { path = "../../narwhal/config" }
 narwhal-consensus = { path = "../../narwhal/consensus" }
