[indexer] -  module cache (#9090)
## Description 

Added module cache to indexer for parsing move objects

## Test Plan 

Added Integration test

--- a/crates/sui-indexer/Cargo.toml
+++ b/crates/sui-indexer/Cargo.toml
@@ -41,9 +41,10 @@ sui-open-rpc-macros = { path = "../sui-open-rpc-macros" }
 sui-sdk = { path = "../sui-sdk" }
 sui-types = { path = "../sui-types" }
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
+telemetry-subscribers.workspace = true
 
 move-core-types.workspace = true
-telemetry-subscribers.workspace = true
+move-bytecode-utils.workspace = true
 
 [features]
 pg_integration = []
