--- a/crates/sui-indexer/Cargo.toml
+++ b/crates/sui-indexer/Cargo.toml
@@ -11,16 +11,17 @@ edition = "2021"
 anyhow = { version = "1.0.64", features = ["backtrace"] }
 async-trait = "0.1.61"
 backoff = { version = "0.4", features = ["futures", "futures-core", "pin-project-lite", "tokio", "tokio_1"] }
+bcs = "0.1.4"
 chrono = { version = "0.4.23", features = ["clock", "serde"] }
-rand = "0.8"
 clap = { version = "3.2.17", features = ["derive"] }
 diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2", "serde_json"] }
 diesel-derive-enum = { version = "2.0.0", features = ["postgres"] }
 futures = "0.3.23"
 jsonrpsee = { version = "0.16.2", features = ["full"] }
 jsonrpsee-proc-macros = "0.16.2"
-serde = { version = "1.0.144", features = ["derive"] }
 prometheus = "0.13.3"
+rand = "0.8"
+serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.83"
 thiserror = "1.0.34"
 tracing = "0.1.36"
