--- a/crates/sui-node/Cargo.toml
+++ b/crates/sui-node/Cargo.toml
@@ -25,6 +25,7 @@ tower = "0.4.13"
 git-version = "0.3.5"
 const-str = "0.5.3"
 reqwest = { version = "0.11.13", default_features= false, features = ["blocking", "json", "rustls-tls"] }
+tap = "1.0.1"
 
 sui-tls = { path = "../sui-tls" }
 sui-config = { path = "../sui-config" }
