--- a/crates/sui/Cargo.toml
+++ b/crates/sui/Cargo.toml
@@ -23,6 +23,8 @@ bip32 = "0.4.0"
 prettytable-rs = "0.10.0"
 git-version = "0.3.5"
 const-str = "0.5.3"
+rand = "0.8.5"
+inquire = "0.6.0"
 
 sui-core = { path = "../sui-core" }
 sui-framework = { path = "../sui-framework" }
@@ -40,6 +42,7 @@ sui-protocol-config = { path = "../sui-protocol-config" }
 shared-crypto = { path = "../shared-crypto" }
 
 fastcrypto.workspace = true
+move-bytecode-utils.workspace = true
 
 rustyline = "9.1.2"
 rustyline-derive = "0.7.0"
@@ -92,3 +95,9 @@ assert_cmd = "2.0.6"
 
 [package.metadata.cargo-udeps.ignore]
 normal = ["jemalloc-ctl"]
+
+
+[[example]]
+name = "generate-genesis-checkpoint"
+path = "src/generate_genesis_checkpoint.rs"
+test = false
