--- a/.github/workflows/simtest.yml
+++ b/.github/workflows/simtest.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   simtest:
     timeout-minutes: 120
-    runs-on: [ self-hosted, self-hosted-arc ]
+    runs-on: [ self-hosted, simtest-01 ]
     permissions:
       # The "id-token: write" permission is required or Machine ID will not be
       # able to authenticate with the cluster.
@@ -16,38 +16,39 @@ jobs:
       contents: read
 
     steps:
-      - name: Install Teleport
-        uses: teleport-actions/setup@75c810ac63a7e9b28ca4795c6111619f2a13ac71 # pin@v1
-        with:
-          version: 11.3.4
+      # - name: Install Teleport
+      #   uses: teleport-actions/setup@75c810ac63a7e9b28ca4795c6111619f2a13ac71 # pin@v1
+      #   with:
+      #     version: 11.3.4
 
-      - name: Authorize against Teleport
-        id: auth
-        uses: teleport-actions/auth@6e73aa03a98e781ca6692817fbb6e554640a56b3 # pin@v1
-        with:
-          # Specify the publically accessible address of your Teleport proxy.
-          proxy: proxy.mysten-int.com:443
-          # Specify the name of the join token for your bot.
-          token: sui-simtest-token
-          # Specify the length of time that the generated credentials should be
-          # valid for. This is optional and defaults to "1h"
-          certificate-ttl: 2h
+      # - name: Authorize against Teleport
+      #   id: auth
+      #   uses: teleport-actions/auth@6e73aa03a98e781ca6692817fbb6e554640a56b3 # pin@v1
+      #   with:
+      #     # Specify the publically accessible address of your Teleport proxy.
+      #     proxy: proxy.mysten-int.com:443
+      #     # Specify the name of the join token for your bot.
+      #     token: sui-simtest-token
+      #     # Specify the length of time that the generated credentials should be
+      #     # valid for. This is optional and defaults to "1h"
+      #     certificate-ttl: 2h
 
       - name: Checkout sui repo
         run: |
-          tsh ssh -i ${{ steps.auth.outputs.identity-file }} ubuntu@simtest-01 "cd ~/sui && git fetch origin && git rebase origin/main && cargo clean"
+          # tsh ssh -i ${{ steps.auth.outputs.identity-file }} ubuntu@simtest-01 "cd ~/sui && git fetch origin && git rebase origin/main && cargo clean"
+          cd ~/sui && git fetch origin && git rebase origin/main && cargo clean
 
-      - name: Install simtest
-        run: |
-          tsh ssh -i ${{ steps.auth.outputs.identity-file }} ubuntu@simtest-01 "cd ~/sui && ./scripts/simtest/install.sh"
+      # - name: Install simtest
+      #   run: |
+      #     tsh ssh -i ${{ steps.auth.outputs.identity-file }} ubuntu@simtest-01 "cd ~/sui && ./scripts/simtest/install.sh"
 
-      - name: Build simtest
-        run: |
-          tsh ssh -i ${{ steps.auth.outputs.identity-file }} ubuntu@simtest-01 "cd ~/sui && MSIM_TEST_NUM=30 SIM_STRESS_TEST_DURATION_SECS=300 CARGO_TERM_COLOR=always CARGO_INCREMENTAL=0 CARGO_NET_RETRY=10 RUST_BACKTRACE=short RUST_LOG=off USE_MOCK_CRYPTO=1 ./scripts/simtest/cargo-simtest simtest build"
+      # - name: Build simtest
+      #   run: |
+      #     tsh ssh -i ${{ steps.auth.outputs.identity-file }} ubuntu@simtest-01 "cd ~/sui && MSIM_TEST_NUM=30 SIM_STRESS_TEST_DURATION_SECS=300 CARGO_TERM_COLOR=always CARGO_INCREMENTAL=0 CARGO_NET_RETRY=10 RUST_BACKTRACE=short RUST_LOG=off USE_MOCK_CRYPTO=1 ./scripts/simtest/cargo-simtest simtest build"
       
-      - name: Run simtest
-        run: |
-          tsh ssh -i ${{ steps.auth.outputs.identity-file }} ubuntu@simtest-01 "cd ~/sui && MSIM_TEST_NUM=30 SIM_STRESS_TEST_DURATION_SECS=300 CARGO_TERM_COLOR=always CARGO_INCREMENTAL=0 CARGO_NET_RETRY=10 RUST_BACKTRACE=short RUST_LOG=off USE_MOCK_CRYPTO=1 ./scripts/simtest/simtest-run.sh"
+      # - name: Run simtest
+      #   run: |
+      #     tsh ssh -i ${{ steps.auth.outputs.identity-file }} ubuntu@simtest-01 "cd ~/sui && MSIM_TEST_NUM=30 SIM_STRESS_TEST_DURATION_SECS=300 CARGO_TERM_COLOR=always CARGO_INCREMENTAL=0 CARGO_NET_RETRY=10 RUST_BACKTRACE=short RUST_LOG=off USE_MOCK_CRYPTO=1 ./scripts/simtest/simtest-run.sh"
 
   # notify:
   #   name: Notify
