wallet-ext: stricter csp

--- a/apps/wallet/src/manifest/manifest.json
+++ b/apps/wallet/src/manifest/manifest.json
@@ -33,5 +33,8 @@
             "resources": ["dapp-interface.js"],
             "matches": ["<all_urls>"]
         }
-    ]
+    ],
+    "content_security_policy": {
+        "extension_pages": "default-src 'none'; object-src 'none'; connect-src *; font-src 'self'; img-src *; script-src 'self'; style-src 'self' 'unsafe-inline'; base-uri 'self'; form-action 'none'; frame-ancestors 'none';"
+    }
 }
