client publish: gather dependencies (#9086)
## Description 

Changes the internal logic in `client publish` to actually collect
package dependencies in a partitioned set of `published`/`unpublished`/`invalid`
packages based on `published-at` values. We now separate error promotion for `unpublished` packages
when `--with-unpublished-dependencies` is not set (no user-visible
change) and `invalid` packages are hard errors.

## Test Plan 

Updated existing tests.

--- a/crates/sui/Cargo.toml
+++ b/crates/sui/Cargo.toml
@@ -81,6 +81,7 @@ jsonrpsee = { version = "0.16.2", features = ["jsonrpsee-core"] }
 
 test-utils = { path = "../test-utils" }
 rand = "0.8.5"
+expect-test = "1.4.0"
 move-binary-format.workspace = true
 move-package.workspace = true
 sui-core = { path = "../sui-core" }
