--- a/crates/sui-core/Cargo.toml
+++ b/crates/sui-core/Cargo.toml
@@ -107,3 +107,7 @@ test = false
 [[bench]]
 name = "verified_cert_cache_bench"
 harness = false
+
+[[bench]]
+name = "batch_verification_bench"
+harness = false
