--- a/crates/sui-node/Cargo.toml
+++ b/crates/sui-node/Cargo.toml
@@ -16,6 +16,7 @@ anyhow = { version = "1.0.64", features = ["backtrace"] }
 clap = { version = "3.2.17", features = ["derive"] }
 multiaddr = "0.17.0"
 prometheus = "0.13.3"
+protobuf = {version="2.28", features=["with-bytes"]}
 tokio = { workspace = true, features = ["full"] }
 tracing = "0.1.36"
 parking_lot = "0.12.1"
