attempt to fix failing diesel_derives

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -155,6 +155,7 @@ jobs:
     runs-on: [ubuntu-ghcloud]
     steps:
       - uses: actions/checkout@v3
+      - uses: actions-rs/toolchain@v1
 
       - name: Setup environment
         run: .github/scripts/rosetta/setup.sh
