Limit effects size and revert (#9026)
## Description 

Limit effects size and rollback when too large.
Rollback still involves applying the gas smashed effects.
We have a soft and hard limit for system TXes. Soft limit alerts and
hard limit terminates the TX.

## Test Plan 
Tested effects generation and temp store.

---
If your changes are not user-facing and not a breaking change, you can
skip the following section. Otherwise, please indicate what changed, and
then add to the Release Notes section as highlighted during the release
process.

### Type of Change (Check all that apply)

- [x] user-visible impact
- [ ] breaking change for a client SDKs
- [ ] breaking change for FNs (FN binary must upgrade)
- [ ] breaking change for validators or node operators (must upgrade
binaries)
- [ ] breaking change for on-chain data layout
- [ ] necessitate either a data wipe or data migration

### Release notes
Serialized effects are limited to 512k in size.

--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -230,6 +230,11 @@ ExecutionFailureStatus:
           - idx: U16
     23:
       InvalidTransferObject: UNIT
+    24:
+      EffectsTooLarge:
+        STRUCT:
+          - current_size: U64
+          - max_size: U64
 ExecutionStatus:
   ENUM:
     0:
