--- a/Cargo.toml
+++ b/Cargo.toml
@@ -330,6 +330,7 @@ expect-test = "1.4.0"
 eyre = "0.6.8"
 fdlimit = "0.2.1"
 flate2 = "1.0.28"
+ffi_helpers = "0.3.0"
 fs_extra = "1.3.0"
 futures = "0.3.28"
 futures-core = "0.3.21"
