Update blockData types to align with BCS/rust (#16250)
Describe the changes or additions included in this PR.

How did you test the new or updated feature?

---
If your changes are not user-facing and do not break anything, you can
skip the following section. Otherwise, please briefly describe what has
changed under the Release Notes section.

- [ ] protocol change
- [ ] user-visible impact
- [ ] breaking change for a client SDKs
- [ ] breaking change for FNs (FN binary must upgrade)
- [ ] breaking change for validators or node operators (must upgrade
binaries)
- [ ] breaking change for on-chain data layout
- [ ] necessitate either a data wipe or data migration

--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -67,8 +67,8 @@
 			"require": "./dist/cjs/multisig/index.js"
 		},
 		"./transactions": {
-			"import": "./dist/esm/transactions/export.js",
-			"require": "./dist/cjs/transactions/export.js"
+			"import": "./dist/esm/transactions/index.js",
+			"require": "./dist/cjs/transactions/index.js"
 		},
 		"./utils": {
 			"import": "./dist/esm/utils/index.js",
@@ -155,7 +155,7 @@
 		"bech32": "^2.0.0",
 		"gql.tada": "^1.7.0",
 		"graphql": "^16.8.1",
-		"superstruct": "^1.0.3",
-		"tweetnacl": "^1.0.3"
+		"tweetnacl": "^1.0.3",
+		"valibot": "^0.25.0"
 	}
 }
