[6][15/n][enums/Sui] Sui snapshot updates

--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -1002,7 +1002,7 @@ TypeArgumentError:
 TypeOrigin:
   STRUCT:
     - module_name: STR
-    - struct_name: STR
+    - datatype_name: STR
     - package:
         TYPENAME: ObjectID
 TypeTag:
