--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -222,6 +222,10 @@ CompressedSignature:
       ZkLogin:
         NEWTYPE:
           TYPENAME: ZkLoginAuthenticatorAsBytes
+CongestedObjects:
+  NEWTYPESTRUCT:
+    SEQ:
+      TYPENAME: ObjectID
 ConsensusCommitDigest:
   NEWTYPESTRUCT:
     TYPENAME: Digest
@@ -424,6 +428,11 @@ ExecutionFailureStatus:
       SharedObjectOperationNotAllowed: UNIT
     32:
       InputObjectDeleted: UNIT
+    33:
+      ExecutionCancelledDueToSharedObjectCongestion:
+        STRUCT:
+          - congested_objects:
+              TYPENAME: CongestedObjects
 ExecutionStatus:
   ENUM:
     0:
@@ -1044,6 +1053,10 @@ UnchangedSharedKind:
           TYPENAME: SequenceNumber
     2:
       ReadDeleted:
+        NEWTYPE:
+          TYPENAME: SequenceNumber
+    3:
+      Cancelled:
         NEWTYPE:
           TYPENAME: SequenceNumber
 UpgradeInfo:
