--- a/crates/sui-types/tests/staged/exec_failure_status.yaml
+++ b/crates/sui-types/tests/staged/exec_failure_status.yaml
@@ -32,3 +32,4 @@
 30: SuiMoveVerificationTimedout
 31: SharedObjectOperationNotAllowed
 32: InputObjectDeleted
+33: ExecutionCancelledDueToSharedObjectCongestion
